--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
       <li class="nav-item">
         <a routerLink="alumnos" class="nav-link">Alumnos</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="profesores" class="nav-link">Profesores</a>
+      </li>
     </div>
   </nav>
 
