--- a/src/app/components/alumno/alumnos-list/alumnos-list.component.html
+++ b/src/app/components/alumno/alumnos-list/alumnos-list.component.html
@@ -8,7 +8,7 @@
       </li>
       }
     </ul>
-    <button style="margin-top: 10px;" routerLink="/add" class="btn btn-success">Add</button>
+    <button style="margin-top: 10px;" routerLink="/add/alumno" class="btn btn-success">Add</button>
   </div>
   <div class="col-md-6">
     <app-alumno-details [viewMode]=true [currentAlumno]=currentAlumno></app-alumno-details>
