--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
       <li class="nav-item">
         <a routerLink="profesores" class="nav-link">Profesores</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="grados" class="nav-link">Grados</a>
+      </li>
     </div>
   </nav>
 
