--- a/src/app/components/grado/grado-details/grado-details.component.html
+++ b/src/app/components/grado/grado-details/grado-details.component.html
@@ -22,12 +22,18 @@
                 <input type="text" class="form-control" id="nombre" [(ngModel)]="currentGrado.nombre" name="nombre" />
             </div>
             <div class="form-group">
-                <label for="profesor">Profesor</label>
-                <input type="text" class="form-control" id="profesor" [(ngModel)]="currentGrado.profesor" name="profesor" />
+                <mat-form-field>
+                    <mat-label>Profesor</mat-label>
+                    <mat-select [(ngModel)]="currentGrado.profesorId" name="profesor" required>
+                        <mat-option *ngFor="let profesor of profesores" [value]="profesor.id">
+                            {{ profesor.nombreCompleto}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
             </div>
         </form>
 
-        <button type="submit" class="badge badge-success mr-2" routerLink="/grado">
+        <button type="submit" class="badge badge-success mr-2" routerLink="/grados">
             Home
         </button>
 
