--- a/src/app/components/profesor/profesor-details/profesor-details.component.html
+++ b/src/app/components/profesor/profesor-details/profesor-details.component.html
@@ -10,7 +10,7 @@
         </div>
         <div>
           <label><strong>Genero:</strong></label>
-          {{ currentProfesor.genero }}
+          {{ getEnumName(currentProfesor.genero) }}
         </div>
         
         <a class="badge badge-warning" routerLink="/profesor/{{currentProfesor.id}}">
@@ -32,11 +32,20 @@
         </div>
         <div class="form-group">
           <label><strong>Genero:</strong></label>
-          {{ currentProfesor.genero}}
+          <div>
+            <mat-form-field style="position:absolute;">
+              <mat-label>Seleccione</mat-label>
+              <mat-select [(value)]="currentProfesor.genero">
+                <mat-option value="0">Masculino</mat-option>
+                <mat-option value="1">Femenino</mat-option>
+                <mat-option value="2">X</mat-option>
+              </mat-select>
+            </mat-form-field>
+        </div>
         </div>
       </form>
     
-      <button type="submit" class="badge badge-success mr-2" routerLink="/profesor">
+      <button type="submit" class="badge badge-success mr-2" routerLink="/profesores">
         Home
       </button>
     
