--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,9 @@
       <li class="nav-item">
         <a routerLink="grados" class="nav-link">Grados</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="matriculas" class="nav-link">Matriculas</a>
+      </li>
     </div>
   </nav>
 
